# beep3

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  common.am  config.h  config.h.in  config.site  config.status  configure  configure.ac  libtool  run_charmc_preprocessing
src/: Makefile  Makefile.am  Makefile.in
src/beep/: Makefile  Makefile.am  Makefile.in  beep.cpp  beep.h  beep_main.cpp  gb  generalized_born.cpp  generalized_born.h
src/beepp.charm++/: Makefile  Makefile.am  Makefile.in  bem_fmm.ci  bem_fmm.cpp  bem_fmm.h  charm_node_patch.cpp  charm_node_patch.h  fh_values_nodegroup.cpp  gmres.ci  gmres.cpp  gmres.h  iteration_handler.ci  iteration_handler.cpp  iteration_handler.h  main.ci  main.cpp  main.h  mesh_library.h  mesh_working_copy.ci  mesh_working_copy.cpp  mesh_working_copy.h  opencl_nodegroup.ci  prerequisites.h  rhs_handler.ci  rhs_handler.cpp  rhs_handler.h  vanilla_fmm.ci  vanilla_fmm.h  vanilla_fmm_prerequisites.h
src/beepp.charm++.fully_parallel/: Makefile.am  Makefile.in  charm_node_patch.cpp  charm_node_patch.h  explicit_worker.ci  explicit_worker.cpp  explicit_worker.decl.h  explicit_worker.def.h  explicit_worker.h  fh_values_nodegroup.ci  fh_values_nodegroup.decl.h  fh_values_nodegroup.def.h  fh_values_nodegroup.h  fmm_globals_nodegroup.cpp  fmm_globals_nodegroup.def.h  fmm_globals_nodegroup.h  fmm_worker.ci  fmm_worker.cpp  fmm_worker.decl.h  fmm_worker.def.h  fmm_worker.h  gmres.cpp  gmres.decl.h  gmres.def.h  iteration_handler.ci  iteration_handler.cpp  iteration_handler.decl.h  iteration_handler.def.h  main.ci  main.cpp  main.decl.h  main.def.h  main.h  mesh_library.ci  mesh_library.cpp  mesh_library.decl.h  mesh_library.def.h  mesh_working_copy.ci  mesh_working_copy.cpp  mesh_working_copy.decl.h  (+23 more)
src/bem/: Makefile  Makefile.am  Makefile.in  bem_kernels.cpp  bem_kernels.h  bezier.h  config_file.cpp  config_file.h  constants.h  edge.h  gts_utils.h  local_integrations.h  mesh.cpp  mesh.h  mesh_instance.cpp  mesh_instance.h  mesh_tarball.cpp  mesh_tarball.h  meshing.cpp  meshing.h  node_patch.cpp  node_patch.h  off_utils.h  opencl_bem.cpp  opencl_bem.h  opencl_bem_kernels.cl  opencl_bem_kernels.cl.h  opencl_bem_structs.h  opendx_utils.h  png1.h  quad_point.h  spharm.cpp  spharm.h  triangle.cpp  triangle.h  tsphm.sh  tsphmb.cpp  tsphmt.cpp  vertex.cpp  vertex.h
src/common/: Makefile  Makefile.am  Makefile.in  base_vector.h  charge.h  charm_prereq.h  math_vector.h  matrix_types.h  multipole_holder.h  octree_indexer.h  rand_rot.h  useful_clock.h
src/fmm/: Makefile  Makefile.am  Makefile.in  bessel_gamma.h  eval_pt.h  fmm.h  fmm.test  fmm_bem_hybrid.h  fmm_globals.h  fmm_math_funcs.h  fmm_octree.h  fmm_time_info.h  gentest.py  interaction_list.h  octree.h  opencl_fmm.cpp  opencl_fmm.h  opencl_fmm_kernels.cl  opencl_fmm_kernels.cl.h  test_fmm.cpp
src/fmm.charm++/: Makefile  Makefile.am  Makefile.in  main.ci  main.cpp  main.h  opencl_nodegroup.cpp  opencl_nodegroup.h  vanilla_fmm.ci  vanilla_fmm.cpp  vanilla_fmm.h
src/fmm.charm++.fully_parallel/: Makefile.am  Makefile.in  fmm_globals_nodegroup.ci  fmm_globals_nodegroup.cpp  fmm_globals_nodegroup.decl.h  fmm_globals_nodegroup.h  main.ci  main.cpp  main.decl.h  main.def.h  main.h  opencl_nodegroup.decl.h  opencl_nodegroup.def.h  opencl_nodegroup.h  parallel_fmm_octree.ci  parallel_fmm_octree.cpp  parallel_fmm_octree.decl.h  parallel_fmm_octree.def.h  vanilla_fmm_evals.ci  vanilla_fmm_evals.def.h  vanilla_fmm_prerequisites.h  vanilla_fmm_worker.ci  vanilla_fmm_worker.cpp  vanilla_fmm_worker.decl.h  vanilla_fmm_worker.def.h  vanilla_fmm_worker.h
src/opencl/: Makefile  Makefile.am  Makefile.in  opencl_handler.cpp  opencl_handler.h  opencl_workblob.h
src/pybeep/: Makefile  Makefile.am  Makefile.in  pybeep.cpp
tools/: README  born_ion.py  butterfly.mlx  calc.py  calc_coulomb.py  calc_energy.py  calc_forces.py  constants.py  decimate-90pc.mlx  geometry.py  grid.py  gts_utils.py  kintools.py  loop-ls3.mlx  mesh_utils.py  meshlab-mesh  off-centre.py  opendx_utils.py  pack.py  pack_sphere.py  pdb.py  pdb3.py  poisson.mlx  pqrtools.py  pqrtools3.py  prepare.py  print_mesh_stats.py  pybeep.py  realign.mlx  run_pair.py  test.py
tools/dave-python-api/: BEM.py  amber2std.py  bem_fmm.py  bem_solver.py  born.py  coalesce.py  config_file.py  constants.py  effective_charge.py  ellie-Hdist.py  ellipsoid_mesh-not-worth-it.py  ellipsoid_mesh.py  entities.py  fmm.py  fmm_test.py  geometry.py  gts_utils.py  kintools.py  make_amber.py  mesh-old.py  mesh.py  mesh_advanced.py  mesh_utils.py  objtools.py  octree-new.py  octree.py  opendx_utils.py  pdb2xyzr.py  pdbtools.py  pqr2xyzq.py  pqr2xyzr.py  pqrtools.py  rotate.py  sims_mesh.py  split_ubiquitin.py  trajectory.py  triangles_mesh.py  uhbd2dx.py  universe.py  vector.py  (+1 more)
